--- a/src/app/pages/main/calificaciones/calificaciones.page.html
+++ b/src/app/pages/main/calificaciones/calificaciones.page.html
@@ -24,7 +24,7 @@
           </tr>
           <tr>
             <th>Profesor</th>
-            <td>{{ selectedSubject.profesro }}</td>
+            <td>{{ selectedSubject.profesor }}</td>
           </tr>
           <tr class="spacing">
             <th>Calificación</th>
@@ -32,7 +32,7 @@
           </tr>
           <tr class="spacing">
             <th>Estado de Matrícula</th>
-            <td>{{ matriculaStatus }}</td>
+            <td>{{ selectedSubject.matriculaStatus}}</td>
           </tr>
         </table>
       </ion-card-content>
