--- a/src/app/pages/main/home/home.page.html
+++ b/src/app/pages/main/home/home.page.html
@@ -1,4 +1,13 @@
 <app-header [showMenu]="true" title="Inicio"></app-header>
 <ion-content>
  
+<h1> Bienvenido</h1>
+
+<img src="../../../../assets/icon/graduate.png" alt="" srcset="">
+
+<p>
+    Bienvenido a <strong>UTAmático</strong>, la aplicación oficial de la Universidad Técnica de Ambato,
+     diseñada para estudiantes. Aquí encontrarás herramientas útiles para gestionar tu vida académica.
+  </p>
+
 </ion-content>
