--- a/src/app/shared/components/logo/logo.component.html
+++ b/src/app/shared/components/logo/logo.component.html
@@ -4,5 +4,5 @@
 </ion-text>
 
 <div class="imagen ">
-  <source src="../../../../assets/icon/graduate.png" type="">
+  <img src="../../../../assets/icon/graduate.png" alt="" srcset="">
 </div>
