--- a/src/app/shared/components/logo/logo.component.scss
+++ b/src/app/shared/components/logo/logo.component.scss
@@ -1,5 +1,6 @@
 h1{
     margin-top: 70;
+    color: #e74c3c; /* Color rojo en formato hex, puedes usar otros tonos de rojo si lo prefieres */
 }
 
 .imagen {
@@ -7,7 +8,8 @@ h1{
   }
   
   .imagen img {
-    width: 150px;  /* Ajusta el tamaño de la imagen */
+    width: 170px;  /* Ajusta el tamaño de la imagen */
     height: auto;  /* Mantiene las proporciones */
     border-radius: 50%;  /* Hace la imagen circular (opcional) */
+    margin-top: 30px;
   }
