--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,3 +1,9 @@
 .admin{
     font-size: 13px;
 }
+
+.custom-toolbar {
+    --background: #4CAF50;  /* Cambia este valor por el color que prefieras */
+    --color: white;         /* Cambia el color del texto si es necesario */
+  }
+  
