--- a/src/app/pages/main/main.page.html
+++ b/src/app/pages/main/main.page.html
@@ -10,6 +10,7 @@
       <ion-item routerLink="/main/home">Inicio</ion-item>
       <ion-item routerLink="/main/calificaciones">Calificaciones</ion-item>
       <ion-item routerLink="/main/tareas">Tareas</ion-item>
+      <ion-item routerLink="/main/horarios">Horarios</ion-item>
     </ion-list>
   </ion-content>
   <ion-footer class="ion-no-border safe-p-bottom">
